--- a/recruit-gui/src/app/suggestions/saved-candidates/saved-candidates.component.html
+++ b/recruit-gui/src/app/suggestions/saved-candidates/saved-candidates.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="currentView === 'saved-candidates'">
 	<div class="action-buttons">
-		<button class="btn btn-secondary arenella-btn" (click)="handleswitchViewEvent()">Back</button>
+		<button class="btn btn-secondary arenella-btn" (click)="handleswitchViewEvent()">{{'arenella-suggestions-saved-candidate-btn-back' | translate}}</button>
 	</div>	 
 	<br>
 	<div style="margin-top:0px;">
