--- a/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.html
+++ b/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.html
@@ -33,8 +33,8 @@
 						<thead>
 					    	<tr>
 					      		<th>{{'arenella-recruiter-listing-created' | translate}}</th>
-								<th>{{'arenella-recruiter-listing-title' | translate}}Title</th>
-					            <th>{{'arenella-recruiter-listing-views' | translate}}Views</th>
+								<th>{{'arenella-recruiter-listing-title' | translate}}</th>
+					            <th>{{'arenella-recruiter-listing-views' | translate}}</th>
 					      	</tr>
 						</thead>
 						<tbody>
@@ -85,7 +85,7 @@
 				<form [formGroup]="newListingFormBean">
 					<div [ngSwitch]="activeSubView" class="steps">
 						<div  *ngSwitchCase="'step1'">
-							<h2>{{'arenella-recruiter-listing-step1' | translate}}1 of 5: Job Info</h2>
+							<h2>{{'arenella-recruiter-listing-step1' | translate}}</h2>
 							<span class="listing-nav" >{{'arenella-recruiter-listing-previous' | translate}}</span>
 							<span class="listing-nav" (click)="updateSubviewStep('step2')">{{'arenella-recruiter-listing-next' | translate}}</span>
 							<div class="table listing-step-content">
@@ -95,7 +95,7 @@
 										<td><input type="text" formControlName="title"></td>
 									</tr>
 									<tr>
-										<td>{{'arenella-recruiter-listing-type' | translate}}Type</td>
+										<td>{{'arenella-recruiter-listing-type' | translate}}</td>
 										<td>
 											<select formControlName="type">
 												<option *ngFor="let type of contractTypeOptions" [ngValue]="type.value">{{type.label}}</option>
@@ -123,7 +123,7 @@
 										</td>
 									</tr>
 									<tr>
-										<td>{{'arenella-recruiter-listing-rate' | translate}}Rate</td>
+										<td>{{'arenella-recruiter-listing-rate' | translate}}</td>
 										<td>
 											<input type="radio" name="rateCurrency" value="EUR" class="radio-button" formControlName="rateCurrency"><label class="radio-button_label">{{'arenella-recruiter-listing-eur' | translate}}</label>
 											<input type="radio" name="rateCurrency" value="GBP" class="radio-button" formControlName="rateCurrency"><label class="radio-button_label">{{'arenella-recruiter-listing-gbp' | translate}}</label>
@@ -135,9 +135,9 @@
 							</div>
 						</div>
 						<div  *ngSwitchCase="'step2'">
-							<h2>{{'arenella-recruiter-listing-step2' | translate}}2 of 5: Job Description</h2>
+							<h2>{{'arenella-recruiter-listing-step2' | translate}}</h2>
 							<span class="listing-nav" (click)="updateSubviewStep('step1')">{{'arenella-recruiter-listing-previous' | translate}}</span>
-							<span class="listing-nav" (click)="updateSubviewStep('step3')">{{'arenella-recruiter-listing-next' | translate}}Next</span>
+							<span class="listing-nav" (click)="updateSubviewStep('step3')">{{'arenella-recruiter-listing-next' | translate}}</span>
 							<div class="table listing-step-content">
 								<table class="table">
 									<thead>
@@ -156,9 +156,9 @@
 							</div>
 						</div>
 						<div  *ngSwitchCase="'step3'">
-							<h3>{{'arenella-recruiter-listing-step3' | translate}}3 of 5: Contact information</h3>
+							<h3>{{'arenella-recruiter-listing-step3' | translate}}</h3>
 							<span class="listing-nav" (click)="updateSubviewStep('step2')">{{'arenella-recruiter-listing-previous' | translate}}</span>
-							<span class="listing-nav" (click)="updateSubviewStep('step4')">{{'arenella-recruiter-listing-next' | translate}}Next</span>
+							<span class="listing-nav" (click)="updateSubviewStep('step4')">{{'arenella-recruiter-listing-next' | translate}}</span>
 							<div class="table listing-step-content">
 								<table>
 									<tr>
@@ -177,7 +177,7 @@
 							</div>
 						</div>
 						<div  *ngSwitchCase="'step4'">
-							<h2>{{'arenella-recruiter-listing-step4' | translate}}4 of 5: Languages</h2>
+							<h2>{{'arenella-recruiter-listing-step4' | translate}}</h2>
 							<span class="listing-nav" (click)="updateSubviewStep('step3')">{{'arenella-recruiter-listing-previous' | translate}}</span>
 							<span class="listing-nav" (click)="updateSubviewStep('step5')">{{'arenella-recruiter-listing-ext' | translate}}</span>
 							<div class="listing-step-content">
@@ -187,9 +187,9 @@
 							</div>
 						</div>
 						<div  *ngSwitchCase="'step5'">
-							<h2>{{'arenella-recruiter-listing-step5' | translate}}5 of 5: Skills</h2>
+							<h2>{{'arenella-recruiter-listing-step5' | translate}}</h2>
 							<span class="listing-nav" (click)="updateSubviewStep('step4')">{{'arenella-recruiter-listing-previous' | translate}}</span>
-							<span class="listing-nav">{{'arenella-recruiter-listing-next' | translate}}Next</span>
+							<span class="listing-nav">{{'arenella-recruiter-listing-next' | translate}}</span>
 							<div class="listing-step-content">
 							<div>
 									<input type="text" formControlName="skill">
@@ -269,9 +269,9 @@
 	</div>
 	<div class="feedbackBox;">
 		<div class="modal-body"  style="height:400px;overflow:auto">
-			<p>{{'arenella-recruiter-listing-pub-title' | translate}}Open Position: {{selectedListing.title}}</p>
+			<p>{{'arenella-recruiter-listing-pub-title' | translate}}: {{selectedListing.title}}</p>
 			<br>
-			<p>{{'arenella-recruiter-listing-pub-location' | translate}}Location: {{getCountryCode(selectedListing.country)}}</p>
+			<p>{{'arenella-recruiter-listing-pub-location' | translate}}: {{getCountryCode(selectedListing.country)}}</p>
 			<br>
 			<p>https://www.arenella-ict.com/listing/{{selectedListing.listingId}}</p>
 			<br>
