--- a/recruit-gui/src/app/recruiter-signup/recruiter-signup.component.html
+++ b/recruit-gui/src/app/recruiter-signup/recruiter-signup.component.html
@@ -6,54 +6,50 @@
     <div class="page-body">
             <div>
             	<div class="reruiter-signup-page">
-            		<h1>Create Recruiter Account</h1>
-            		<h5>Sign-up for a no obligation 30 day free trial</h5>
+            		<h1>{{'arenella-recruiter-signup-hdr1' | translate}}</h1>
+            		<h5>{{'arenella-recruiter-signup-hdr2' | translate}}</h5>
             	</div>
             	
             	<div class="recruiter-signup-panel">
 	            	<div class="recruiter-signup-box"> 
-	            		<h3>Sign-up</h3>
+	            		<h3>{{'arenella-recruiter-signup-signup' | translate}}</h3>
 						<form [formGroup]="signupForm">
 							<table>
 							<tr>
-								<td class="tb-lbl">First name</td>
+								<td class="tb-lbl">{{'arenella-recruiter-signup-firstname' | translate}}</td>
 								<td><input type="text" class="inpt-tab-std" formControlName="firstName"/></td>
 							</tr>
 							<tr>
-								<td class="tb-lbl">Surname</td>
+								<td class="tb-lbl">{{'arenella-recruiter-signup-surname' | translate}}</td>
 								<td><input type="text" class="inpt-tab-std" formControlName="surname"/></td>
 							</tr>
 							<tr>
-								<td class="tb-lbl">Email</td>
+								<td class="tb-lbl">{{'arenella-recruiter-signup-email' | translate}}</td>
 								<td><input type="text" class="inpt-tab-std" formControlName="email"/></td>
 							</tr>
 							<tr>
-								<td>Company Name</td>
+								<td>{{'arenella-recruiter-signup-companyname' | translate}}</td>
 								<td><input type="text" class="inpt-tab-std" formControlName="company"/></td>
 							</tr>
 							<tr>
-								<td>Preferred Language</td>
+								<td>{{'arenella-recruiter-signup-preferred-lang' | translate}}</td>
 								<td>
 									<select formControlName="preferredLanguage">
-										<option value="ENGLISH">English</option>
-										<option value="DUTCH">Dutch</option>
-										<option value="FRENCH">French</option>
+										<option value="ENGLISH">{{'arenella-recruiter-signup-en' | translate}}</option>
+										<option value="DUTCH">{{'arenella-recruiter-signup-nl' | translate}}
+										</option>
+										<option value="FRENCH">{{'arenella-recruiter-signup-fr' | translate}}</option>
 									</select>
 								</td>
 								</tr>
 								<tr>
-									<td colspan="2" style="max-width:400px; padding-top:10px; font-style:italic; font-size:12px;">
-										By registering you are agreeing to your information being stored in the system. 
-										Your data will not be shared with third parties.
-										Your activity in the site will be stored internally to provide statistics and 
-										to improve your user experience.
-									</td>
+									<td colspan="2" style="max-width:400px; padding-top:10px; font-style:italic; font-size:12px;">{{'arenella-recruiter-signup-agree' | translate}}</td>
 								</tr>
 								<tr>
 									<td></td>
 									<td>
 										<div class="action-buttons">
-											<button (click)="startFreeTrial()" [disabled]="isFreeTrialButtonEnabled()" class="btn btn-secondary arenella-btn">Start free trial</button>
+											<button (click)="startFreeTrial()" [disabled]="isFreeTrialButtonEnabled()" class="btn btn-secondary arenella-btn">{{'arenella-recruiter-signup-btn-start-trial' | translate}}</button>
 										</div>
 									</td>
 								</tr>
@@ -63,24 +59,14 @@
 					
 					<div class="recruiter-info-box">
 						<div style="margin-bottom:40px;">
-							<h3>Free trial</h3>
-							<p>
-							Sign up for a no obligation free trial. During the trial you can download unlimited candidate CVs, Create unlimited posts on the job board and unlimited requests 
-							for candidates from other recruitment agencies in the Marketplace.
-							</p>
+							<h3>{{'arenella-recruiter-signup-free-trial' | translate}}</h3>
+							<p>{{'arenella-recruiter-signup-free-trial-text' | translate}}</p>
 						</div>
 						
 						<div>
-							<h3>Free and paid subscriptions</h3>
-							<p>
-							The site generates revenue based upon a subscription model. After your 30 day trial ends, the next time you login you will be able to choose from either a 
-							Free subscription with limited weekly downloads, job board posts and marketplace requests or for just 120 euro's per year excluding Tax you 
-							have access to all these features with no limits.
-							</p>
-							<p>
-							The subscription is the only cost involved in using the site. There are no additional costs such as 
-							margins or commissions for placing candidates.  
-							</p>
+							<h3>{{'arenella-recruiter-signup-subscription-titles' | translate}}</h3>
+							<p>{{'arenella-recruiter-signup-subscriptions-text1' | translate}}</p>
+							<p>{{'arenella-recruiter-signup-subscriptions-text2' | translate}}</p>
 						</div>
 					</div>
 	            </div>
