--- a/recruit-gui/src/app/statistics/statistics.component.html
+++ b/recruit-gui/src/app/statistics/statistics.component.html
@@ -5,22 +5,22 @@
 		<div class="nav-tabs-bar">	
 			<ul class="nav nav-tabs">
 			  <li class="nav-item">
-			    <span class="nav-link statsChartTab" (click)="switchTab('logins')">Logins</span>
+			    <span class="nav-link statsChartTab" (click)="switchTab('logins')">{{'arenella-stats-logins' | translate}}</span>
 			  </li>
 			  <li class="nav-item">
-			    <span class="nav-link statsChartTab" (click)="switchTab('downloads')">Downloads</span>
+			    <span class="nav-link statsChartTab" (click)="switchTab('downloads')">{{'arenella-stats-downloads' | translate}}</span>
 			  </li>
 			   <li class="nav-item statsChartTab">
-			    <span class="nav-link" (click)="switchTab('listings')">Listings</span>
+			    <span class="nav-link" (click)="switchTab('listings')">{{'arenella-stats-listings' | translate}}</span>
 			  </li>
 			  <li class="nav-item statsChartTab">
-			    <span class="nav-link" (click)="switchTab('marketplace')">Marketplace</span>
+			    <span class="nav-link" (click)="switchTab('marketplace')">{{'arenella-stats-mp' | translate}}</span>
 			  </li>
 			  <li class="nav-item statsChartTab">
-			    <span class="nav-link" (click)="switchTab('availability')">Availability</span>
+			    <span class="nav-link" (click)="switchTab('availability')">{{'arenella-stats-availability' | translate}}</span>
 			  </li>
 			  <li class="nav-item statsChartTab">
-			    <span class="nav-link" (click)="switchTab('newCandidateStats')">New Candidate Stats</span>
+			    <span class="nav-link" (click)="switchTab('newCandidateStats')">{{'arenella-stats-new-candidates' | translate}}New Candidate Stats</span>
 			  </li>
 			</ul>
 		</div>
@@ -29,7 +29,7 @@
 	
 			<!-- Action buttons -->
 			<div class="action-buttons">
-				<button class="btn btn-secondary arenella-btn" (click)="refreshData()" download>Refresh</button>
+				<button class="btn btn-secondary arenella-btn" (click)="refreshData()" download>{{'arenella-stats-btn-refresh' | translate}}</button>
 			</div>
 				
 			<!--  Define charts -->
@@ -37,29 +37,29 @@
 				<div class="stat-canvas">
 					<!-- Logins -->
 					<div *ngIf="showStatsLogins">
-						<h3>Logins</h3>
-						<button (click)="switchLoginStats('year')">Year</button>
-						<button (click)="switchLoginStats('3months')">3 Months</button>
-						<button (click)="switchLoginStats('week')">Week</button>
+						<h3>{{'arenella-stats-logins-title' | translate}}</h3>
+						<button (click)="switchLoginStats('year')">{{'arenella-stats-logins-btn-year' | translate}}</button>
+						<button (click)="switchLoginStats('3months')">{{'arenella-stats-logins-btn-3-months' | translate}}</button>
+						<button (click)="switchLoginStats('week')">{{'arenella-stats-logins-btn-week' | translate}}</button>
 					</div>
 					<!-- Downloads -->
 					<div *ngIf="showStatsDownloads" style="margin-bottom:45px;">
-						<h3>Daily downloads</h3>
+						<h3>{{'arenella-stats-daily-downloads' | translate}}</h3>
 					</div>
 					<!-- Marketplace -->
 					<div class="chart-wrapper" *ngIf="showMarketplaceStats">			
-						<h3>Requested Candidate Views: {{requestedCandidateViewsTotal}}</h3>
-						<button (click)="switchMarketplaceRequestedCandidatesChartData('week')">This week</button>
-						<button (click)="switchMarketplaceRequestedCandidatesChartData('day')">Today</button>
+						<h3>{{'arenella-stats-candidate-views' | translate}}: {{requestedCandidateViewsTotal}}</h3>
+						<button (click)="switchMarketplaceRequestedCandidatesChartData('week')">{{'arenella-stats-candidate-views-btn-week' | translate}}</button>
+						<button (click)="switchMarketplaceRequestedCandidatesChartData('day')">{{'arenella-stats-candidate-views-btn-today' | translate}}</button>
 					</div>
 					<!-- Availability -->
 					<div class="chart-wrapper" *ngIf="showStatsAvailability">
-						<h5>Available by Function</h5>
+						<h5>{{'arenella-stats-by-function' | translate}}</h5>
 					</div>
 					<!-- New Candidate Stats -->
 					<div class="action-buttons" *ngIf="showNewCandidates" style="float:left">
-						<button class="btn btn-secondary arenella-btn" (click)="loadNewCandidates()" 		download>Todays</button>
-						<button class="btn btn-secondary arenella-btn" (click)="loadNewCandidateStats()" 	download>Latest</button>
+						<button class="btn btn-secondary arenella-btn" (click)="loadNewCandidates()" 		download>{{'arenella-stats-by-function-btn-todays' | translate}}</button>
+						<button class="btn btn-secondary arenella-btn" (click)="loadNewCandidateStats()" 	download>{{'arenella-stats-by-function-btn-latest' | translate}}</button>
 					</div>	
 					<div class="statChartDiv {{statChartDivMobile}}">
 						<canvas  id="leftChart" >{{ leftChart }}</canvas>	
@@ -69,28 +69,28 @@
 				<div class="stat-canvas">
 					<!-- Logins -->
 					<div *ngIf="showStatsLogins">
-						<h3>logins: Recruiters: {{loginCountRecruiter}} Candidates: {{loginCountCandidate}}</h3>
-						<button (click)="switchUserStats('week')">This Week</button>
-						<button (click)="switchUserStats('today')">Today</button>
+						<h3>{{'arenella-stats-logins-recruiters' | translate}} {{loginCountRecruiter}} {{'arenella-stats-logins-candidates' | translate}}: {{loginCountCandidate}}</h3>
+						<button (click)="switchUserStats('week')">{{'arenella-stats-logins-btn-this-week' | translate}}</button>
+						<button (click)="switchUserStats('today')">{{'arenella-stats-logins-btn-today' | translate}}</button>
 					</div>	
 						
 					<!-- Downloads -->
 					<div *ngIf="showStatsDownloads">
-						<h3>Recruiter downloads: {{chartDownloadsTotal}}</h3>
-						<button (click)="switchChartData('week')">This week</button>
-						<button (click)="switchChartData('day')">Today</button>
+						<h3>{{'arenella-stats-recruiter-downloads' | translate}}: {{chartDownloadsTotal}}</h3>
+						<button (click)="switchChartData('week')">{{'arenella-stats-recruiter-downloads-btn-week' | translate}}</button>
+						<button (click)="switchChartData('day')">{{'arenella-stats-recruiter-downloads-btn-today' | translate}}</button>
 					</div>
 					<!-- Listings -->
 					<div *ngIf="showStatsListings">
 						<div class="chart-wrapper">
-							<h5>Totals:</h5>
+							<h5>{{'arenella-stats-recruiter-downloads-totals' | translate}}:</h5>
 							<table>
 								<tr>
-									<td>Listings viewed today</td>
+									<td>{{'arenella-stats-recruiter-downloads-views-today' | translate}}</td>
 									<td>{{listingViewsToday}}</td>
 								</tr>
 								<tr>
-									<td>Listings viewed this week</td>
+									<td>{{'arenella-stats-recruiter-downloads-views-week' | translate}}</td>
 									<td>{{listingViewsThisWeek}}</td>
 								</tr>
 							</table>
@@ -98,22 +98,22 @@
 					</div>
 					<!-- Availability -->
 					<div class="chart-wrapper" *ngIf="showStatsAvailability">
-						<h5>Totals:</h5>
+						<h5>{{'arenella-stats-availability-totals' | translate}}:</h5>
 						<table>
 							<tr>
-								<td>Active Users</td>
+								<td>{{'arenella-stats-availability-active-users' | translate}}</td>
 								<td>{{totalNumberActiveCandidates}}</td>
 							</tr>
 						</table>
 					</div>
 					<!-- Weekly Stats -->
 					<div *ngIf="showNewCandidates && showNewCandidatesDiv">
-					<p>
-						New Candidates available
+					<p>{{'arenella-stats-new-candidates' | translate}}
+						
 					</p>
 					<br/>
 					<ul *ngFor="let candidate of newCandidates">
-						<li>{{countryToCode(candidate.country)}} - EXP: {{candidate.yearsExperience}} Years - {{candidate.functionDesc}}</li>	
+						<li>{{countryToCode(candidate.country)}} - {{'arenella-stats-new-candidates-exp' | translate}}: {{candidate.yearsExperience}} {{'arenella-stats-new-candidates-years' | translate}} - {{candidate.functionDesc}}</li>	
 					</ul>
 					<br/>
 					<p>
@@ -125,7 +125,7 @@
 					</p>
 					</div>
 					<div *ngIf="showNewCandidates && showNewCandidateStatsDiv" class="stats-table">
-						<p>The following new candidates have been added:</p>
+						<p>{{'arenella-stats-added-candidates' | translate}}</p>
 						<table>
 						<tr *ngFor="let candidateStat of newCandidateStats">
 							<td class="new-candidate-table-td">{{candidateStat.count}}</td>  <td class="new-candidate-table-td">x</td> <td class="new-candidate-table-td">{{candidateStat.functionType}}</td>
@@ -148,7 +148,7 @@
 							<table style="width:100%">
 								<thead>
 									<tr>
-										<th>User</th>
+										<th>{{'arenella-stats-logins-user' | translate}}</th>
 									</tr>
 								</thead>
 								<tbody>  
@@ -160,15 +160,15 @@
 						</div>
 					</div>
 					<div class="chart-wrapper" >
-						<h3>Searches</h3>
-						<button (click)="switchUserStats('week')">This Week</button>
-						<button (click)="switchUserStats('today')">Today</button>
+						<h3>{{'arenella-stats-searches' | translate}}</h3>
+						<button (click)="switchUserStats('week')">{{'arenella-stats-searches-btn-week' | translate}}</button>
+						<button (click)="switchUserStats('today')">{{'arenella-stats-searches-btn-today' | translate}}</button>
 						<div class="login-table-view">
 						<table style="width:100%">
 								<thead>
 									<tr>
-										<th>Country</th>
-										<th>Function</th>
+										<th>{{'arenella-stats-searches-country' | translate}}</th>
+										<th>{{'arenella-stats-searches-function' | translate}}</th>
 									</tr>
 								</thead>
 								<tbody>
