--- a/recruit-gui/src/app/suggestions/candidate-profile/candidate-profile.component.html
+++ b/recruit-gui/src/app/suggestions/candidate-profile/candidate-profile.component.html
@@ -4,17 +4,17 @@
 	
 <div class="action-buttons">
 	<a class="currliculum-link" (click)="doCreditCheckByCount()" href="{{getCurriculumDownloadUrl(suggestedCandidate.candidateId)}}" *ngIf="showBtnDownloadCVPassedCreditCheck()">
-		<button class="btn btn-secondary arenella-btn">Download CV</button>
+		<button class="btn btn-secondary arenella-btn">{{'arenella-suggestions-profile-btn-download-cv' | translate}}</button>
 	</a>
-	<button class="btn btn-secondary arenella-btn" 					(click)="handleNoCredit()" 								*ngIf="showBtnDownloadCV()">Download CV</button>
-	<button class="btn btn-secondary arenella-btn hide-for-mobile" 	(click)="showInlineCVView()" 							*ngIf="showBtnShowCV()">Display CV</button>
-	<button class="btn btn-secondary arenella-btn" 					(click)="editAccount()"									*ngIf="showBtnEdit()" > Edit</button>
-    <button class="btn btn-secondary arenella-btn" 					(click)="deleteAccount()" 								*ngIf="showBtnDelete()"> Delete</button>
-	<button class="btn btn-secondary arenella-btn" 					(click)="rememberCandidate(suggestedCandidate)" 		*ngIf="showBtnSaveCandidate()" title="Add candidate to your list of saved candidates">Save Candidate</button>
-	<button class="btn btn-secondary arenella-btn" 					(click)="rememberCandidate(suggestedCandidate)" 		*ngIf="showBtnUnsavedCandidateDisabled()" title="Add candidate to your list of saved candidates" disabled>Save Candidate</button>
-	<button class="btn btn-secondary arenella-btn" 					(click)="forgetCandidate()" 							*ngIf="showBtnUnsaveCandidate()" title="removed candidate from your list of saved candidates">Unsave Candidate</button>
-	<button class="btn btn-secondary arenella-btn" 					(click)="showNotesDialog(notesBox,suggestedCandidate)" 	*ngIf="showBtnNotes()">Notes</button>
-	<button class="btn btn-secondary arenella-btn" 					(click)="back()">Back</button>
+	<button class="btn btn-secondary arenella-btn" 					(click)="handleNoCredit()" 								*ngIf="showBtnDownloadCV()">{{'arenella-suggestions-profile-btn-download-cv' | translate}}</button>
+	<button class="btn btn-secondary arenella-btn hide-for-mobile" 	(click)="showInlineCVView()" 							*ngIf="showBtnShowCV()">{{'arenella-suggestions-profile-btn-download-cv' | translate}}</button>
+	<button class="btn btn-secondary arenella-btn" 					(click)="editAccount()"									*ngIf="showBtnEdit()" > {{'arenella-suggestions-profile-btn-edit' | translate}}</button>
+    <button class="btn btn-secondary arenella-btn" 					(click)="deleteAccount()" 								*ngIf="showBtnDelete()"> {{'arenella-suggestions-profile-btn-delete' | translate}}</button>
+	<button class="btn btn-secondary arenella-btn" 					(click)="rememberCandidate(suggestedCandidate)" 		*ngIf="showBtnSaveCandidate()" title="Add candidate to your list of saved candidates">{{'arenella-suggestions-profile-btn-save' | translate}}</button>
+	<button class="btn btn-secondary arenella-btn" 					(click)="rememberCandidate(suggestedCandidate)" 		*ngIf="showBtnUnsavedCandidateDisabled()" title="Add candidate to your list of saved candidates" disabled>{{'arenella-suggestions-profile-btn-save' | translate}}</button>
+	<button class="btn btn-secondary arenella-btn" 					(click)="forgetCandidate()" 							*ngIf="showBtnUnsaveCandidate()" title="removed candidate from your list of saved candidates">{{'arenella-suggestions-profile-btn-unsave' | translate}}</button>
+	<button class="btn btn-secondary arenella-btn" 					(click)="showNotesDialog(notesBox,suggestedCandidate)" 	*ngIf="showBtnNotes()">{{'arenella-suggestions-profile-btn-notes' | translate}}</button>
+	<button class="btn btn-secondary arenella-btn" 					(click)="back()">{{'arenella-suggestions-profile-btn-back' | translate}}</button>
 </div>
 			
 <!-- Left Pane -->
@@ -26,20 +26,20 @@
 
 	<div *ngIf="candidateProfile.introduction && candidateProfile.introduction.length != 0" style="margin-top:50px;margin-bottom:50px;">
 		<div>
-			<h1 style="background:#e8e8e8">Introduction</h1>
+			<h1 style="background:#e8e8e8">{{'arenella-suggestions-profile-introduction' | translate}}</h1>
 		</div>
 		<div style="width:100%;">
 			<pre style="white-space:pre-line;font-family: Roboto, 'Helvetica Neue', sans-serif;">{{candidateProfile.introduction}}</pre>
 		</div>
 	</div>		
 	<div *ngIf="!candidateProfile.introduction || candidateProfile.introduction.length == 0" style="margin-top:50px;margin-bottom:50px;">
-		<div><h1 style="background:#e8e8e8">Introduction</h1></div>
+		<div><h1 style="background:#e8e8e8">{{'arenella-suggestions-profile-introduction' | translate}}Introduction</h1></div>
 		<div style="width:100%;">
 			<div style="white-space:pre-line;font-family: Roboto, 'Helvetica Neue', sans-serif;">
-			I would like to introduce myself. My name is {{this.suggestedCandidate.firstname}} 
-			and I have {{this.suggestedCandidate.yearsExperience}} years experience. I am currently looking for a new role.
+			{{'arenella-suggestions-profile-intro-text' | translate}} {{this.suggestedCandidate.firstname}} 
+			{{'arenella-suggestions-profile-intro-text-2' | translate}} {{this.suggestedCandidate.yearsExperience}} {{'arenella-suggestions-profile-intro-text-3' | translate}}years experience. I am currently looking for a new role.
 		
-			I am based in {{this.suggestedCandidate.country | enumToHumanReadableValue}} 
+			{{'arenella-suggestions-profile-intro-text-4' | translate}} {{this.suggestedCandidate.country | enumToHumanReadableValue}} 
 			</div>
 		</div>
 	</div>		
@@ -47,27 +47,27 @@
 	<div>
 		<table class="table candidate-suggestion-table">
 			<tr>
-				<td class="candidate-suggestion-table-hdr">Candidate Number</td>
+				<td class="candidate-suggestion-table-hdr">{{'arenella-suggestions-profile-candidate-number' | translate}}</td>
 				<td>{{suggestedCandidate.candidateId}}</td>
 			</tr>
 			<tr>
-				<td class="candidate-suggestion-table-hdr">Name</td>
+				<td class="candidate-suggestion-table-hdr">{{'arenella-suggestions-profile-candidate-name' | translate}}</td>
 				<td>{{suggestedCandidate.firstname}} {{suggestedCandidate.surname}}</td>
 			</tr>
 			<tr *ngIf="!isCandidate()">
-				<td class="candidate-suggestion-table-hdr">Skill Accuracy</td>
+				<td class="candidate-suggestion-table-hdr">{{'arenella-suggestions-profile-candidate-skill-accuracy' | translate}}</td>
 				<td>
 					<div class="suggestion-perception-{{suggestedCandidate.accuracySkills}}"></div>
 				</td>
 			</tr>
 			<tr *ngIf="!isCandidate()">
-				<td class="candidate-suggestion-table-hdr">Language Accuracy</td>
+				<td class="candidate-suggestion-table-hdr">{{'arenella-suggestions-profile-candidate-lang-accuracy' | translate}}</td>
 				<td>
 					<div class="suggestion-perception-{{suggestedCandidate.accuracyLanguages}}"></div>
 				</td>
 			</tr>
 			<tr *ngIf="!isCandidate()">
-				<td class="candidate-suggestion-table-hdr">Matching Skills</td>
+				<td class="candidate-suggestion-table-hdr">{{'arenella-suggestions-profile-candidate-matching-skills' | translate}}</td>
 				<td>
 					<div style="float:center" *ngFor="let skill of skillsFiltersMatch()" class="{{hasRequiredSkill(skill)}}">
 						{{skill}}
@@ -75,7 +75,7 @@
 				</td>
 			</tr>
 			<tr *ngIf="!isCandidate()">
-				<td class="candidate-suggestion-table-hdr">Missing Skills</td>
+				<td class="candidate-suggestion-table-hdr">{{'arenella-suggestions-profile-candidate-missing-skills' | translate}}</td>
 				<td>
 					<div style="float:center" *ngFor="let skill of skillsFiltersNoMatch()" class="{{hasRequiredSkill(skill)}}">
 						{{skill}}
@@ -88,25 +88,25 @@
 <!-- Candidte contact -->
 <dialog #contactBox >
 	<div class="modal-header">
-		<h4 class="modal-title">Message Candidate</h4>
+		<h4 class="modal-title">{{'arenella-suggestions-profile-box-contact-hdr' | translate}}</h4>
  		<div class="filter-close-box" (click)="contactBox.close()">X</div>
 	</div>
 	<div class="modal-body" *ngIf="contactCandidateView === 'message'">
 		<form [formGroup]="sendMessageGroup">
 			<div style="float:left;margin:0px; margin-bottom:10px;">
-				<b>Title:</b><input type="text" style="margin-left:10px;width:300px;" formControlName="title"/>
+				<b>{{'arenella-suggestions-profile-box-contact-title' | translate}}:</b><input type="text" style="margin-left:10px;width:300px;" formControlName="title"/>
 				<br>
 			</div>
 			<textarea formControlName="message"></textarea>
-			<button class="btn btn-secondary arenella-btn" (click)="sendMessageToCandidate()">Send</button>
+			<button class="btn btn-secondary arenella-btn" (click)="sendMessageToCandidate()">{{'arenella-suggestions-profile-box-contact-btn-send' | translate}}</button>
 		</form>	
 	</div>
 	<div class="modal-body message-send-success" *ngIf="contactCandidateView === 'success'">
-			<p>Message Sent Successfully</p>
-			<p>You can view a copy of your message and any replies in your inbox</p>
+			<p>{{'arenella-suggestions-profile-box-contact-msg-success-1' | translate}}</p>
+			<p>{{'arenella-suggestions-profile-box-contact-msg-success-2' | translate}}</p>
 	</div>
 	<div class="modal-body" *ngIf="contactCandidateView === 'failure'">
-			<p class="message-send-failure">Failed to Send Message</p>
+			<p class="message-send-failure">{{'arenella-suggestions-profile-box-contact-msg-failed' | translate}}</p>
 	</div>
 </dialog> 
 <!-- Delete -->
@@ -114,17 +114,17 @@
 
 	<!--  Options -->
 	<div class="modal-header">
-		<h4 class="modal-title">Confirm Delete</h4>
+		<h4 class="modal-title">{{'arenella-suggestions-profile-box-delete-hdr' | translate}}</h4>
 		<div class="filter-close-box" (click)="confirmDeleteModal.close()">X</div>
 	</div>
 	<div class="modal-body publicity-suggestions">
-		<p>This profile will be deleted and it will no longer be possible to access the associated data</p>
+		<p>{{'arenella-suggestions-profile-box-delete-msg' | translate}}</p>
 		<button class="btn btn-secondary arenella-btn" (click)="confirmDeleteProfile()">Confirm</button>
 	</div> 
 </dialog>
 <dialog #notesBox>
 	<div class="modal-header">
-		<h4 class="modal-title">Notes for Candidate</h4>
+		<h4 class="modal-title">{{'arenella-suggestions-profile-box-notes-hdr' | translate}}</h4>
  		<div class="filter-close-box" (click)="notesBox.close()">X</div>
 	</div>
 	<div class="feedbackBox;">
@@ -132,10 +132,10 @@
 			<div class="modal-body" *ngIf="!updatedSavedCandidate">
 				<textarea class="notes-textarea" formControlName="notes"></textarea>
 				<br/>
-				<button class="btn btn-secondary" (click)="updateSavedCandidate()" *ngIf="!isNoLongerAvailable()" download>Save</button>
+				<button class="btn btn-secondary" (click)="updateSavedCandidate()" *ngIf="!isNoLongerAvailable()" download>{{'arenella-suggestions-profile-box-notes-btn-saved' | translate}}</button>
 			</div>
 			<div class="modal-body" *ngIf="updatedSavedCandidate">
-				<h1>Updated</h1>
+				<h1>{{'arenella-suggestions-profile-box-msg-updated' | translate}}</h1>
 			</div>              
 		</form>
 	</div>
