--- a/recruit-gui/src/app/suggestions/inline-cv/inline-cv.component.html
+++ b/recruit-gui/src/app/suggestions/inline-cv/inline-cv.component.html
@@ -1,5 +1,5 @@
 <div class="action-buttons">
-	<button class="btn btn-secondary arenella-btn" (click)=handleswitchViewEvent()>Back</button>
+	<button class="btn btn-secondary arenella-btn" (click)=handleswitchViewEvent()>{{'arenella-suggestions-inlinecv-btn-back' | translate}}</button>
 </div>
 		
 <object id="content"  class="cv-inline" [attr.data]="trustedResourceUrl"></object>
